SwaggerGeneration,Enable Nullable
- switched from Swashbucke to NSwag
- enabled Nullable
- Updated some nuget packages
