# ScanServer_NetCore/swagger.json
@@ -1,80 +1,72 @@
 {
-  "openapi": "3.0.1",
+  "x-generator": "NSwag v13.13.2.0 (NJsonSchema v10.5.2.0 (Newtonsoft.Json v9.0.0.0))",
+  "swagger": "2.0",
   "info": {
-    "title": "ScanServer_NetCore",
-    "version": "v1"
+    "title": "My Title",
+    "version": "1.0.0"
   },
+  "host": "localhost:44309",
+  "schemes": [
+    "https"
+  ],
+  "produces": [
+    "text/plain",
+    "application/json",
+    "text/json"
+  ],
   "paths": {
     "/api/File/MergeFiles/{folder}/{resultFileName}": {
       "post": {
         "tags": [
           "File"
         ],
+        "operationId": "File_MergeFiles",
+        "consumes": [
+          "application/json",
+          "text/json",
+          "application/*+json"
+        ],
         "parameters": [
           {
+            "type": "string",
             "name": "folder",
             "in": "path",
             "required": true,
+            "x-nullable": true
+          },
+          {
+            "type": "string",
+            "name": "resultFileName",
+            "in": "path",
+            "required": true,
+            "x-nullable": true
+          },
+          {
+            "name": "filesToMerge",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "string"
+              }
+            },
+            "x-nullable": false
+          }
+        ],
+        "responses": {
+          "200": {
+            "x-nullable": false,
+            "description": "",
             "schema": {
               "type": "string"
             }
           },
-          {
-            "name": "resultFileName",
-            "in": "path",
-            "required": true,
+          "400": {
+            "x-nullable": false,
+            "description": "",
             "schema": {
               "type": "string"
-            }
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "array",
-                "items": {
-                  "type": "string"
-                }
-              }
-            },
-            "text/json": {
-              "schema": {
-                "type": "array",
-                "items": {
-                  "type": "string"
-                }
-              }
-            },
-            "application/*+json": {
-              "schema": {
-                "type": "array",
-                "items": {
-                  "type": "string"
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "type": "string"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "type": "string"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "type": "string"
-                }
-              }
             }
           }
         }
@@ -85,43 +77,29 @@
         "tags": [
           "File"
         ],
+        "operationId": "File_DeleteFile",
         "parameters": [
           {
+            "type": "string",
             "name": "folder",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "x-nullable": true
           },
           {
+            "type": "string",
             "name": "fileName",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "x-nullable": true
           }
         ],
         "responses": {
           "200": {
-            "description": "Success",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "type": "boolean"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "type": "boolean"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "type": "boolean"
-                }
-              }
+            "x-nullable": false,
+            "description": "",
+            "schema": {
+              "type": "boolean"
             }
           }
         }
@@ -132,25 +110,35 @@
         "tags": [
           "File"
         ],
+        "operationId": "File_ReadFile",
         "parameters": [
           {
+            "type": "string",
             "name": "folder",
             "in": "query",
-            "schema": {
-              "type": "string"
-            }
+            "x-nullable": true
           },
           {
+            "type": "string",
             "name": "fileToRead",
             "in": "query",
-            "schema": {
-              "type": "string"
-            }
+            "x-nullable": true
           }
         ],
         "responses": {
           "200": {
-            "description": "Success"
+            "x-nullable": false,
+            "description": "",
+            "schema": {
+              "type": "file"
+            }
+          },
+          "400": {
+            "x-nullable": false,
+            "description": "",
+            "schema": {
+              "type": "string"
+            }
           }
         }
       }
@@ -160,43 +148,31 @@
         "tags": [
           "File"
         ],
+        "operationId": "File_ReadFiles",
         "parameters": [
           {
+            "type": "string",
             "name": "directory",
             "in": "query",
-            "schema": {
-              "type": "string"
-            }
+            "x-nullable": true
           }
         ],
         "responses": {
           "200": {
-            "description": "Success",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "string"
-                  }
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "string"
-                  }
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "string"
-                  }
-                }
+            "x-nullable": false,
+            "description": "",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "string"
               }
+            }
+          },
+          "400": {
+            "x-nullable": false,
+            "description": "",
+            "schema": {
+              "type": "string"
             }
           }
         }
@@ -207,51 +183,43 @@
         "tags": [
           "File"
         ],
+        "operationId": "File_RenameFile",
         "parameters": [
           {
+            "type": "string",
             "name": "folder",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "x-nullable": true
           },
           {
+            "type": "string",
             "name": "oldFileName",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "x-nullable": true
           },
           {
+            "type": "string",
             "name": "newFileName",
             "in": "path",
             "required": true,
-            "schema": {
-              "type": "string"
-            }
+            "x-nullable": true
           }
         ],
         "responses": {
           "200": {
-            "description": "Success",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "type": "string"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "type": "string"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "type": "string"
-                }
-              }
+            "x-nullable": false,
+            "description": "",
+            "schema": {
+              "type": "string"
+            }
+          },
+          "400": {
+            "x-nullable": false,
+            "description": "",
+            "schema": {
+              "type": "string"
             }
           }
         }
@@ -262,33 +230,15 @@
         "tags": [
           "File"
         ],
+        "operationId": "File_ReadFolders",
         "responses": {
           "200": {
-            "description": "Success",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "string"
-                  }
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "string"
-                  }
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "type": "string"
-                  }
-                }
+            "x-nullable": false,
+            "description": "",
+            "schema": {
+              "type": "array",
+              "items": {
+                "type": "string"
               }
             }
           }
@@ -300,65 +250,71 @@
         "tags": [
           "Scan"
         ],
+        "operationId": "Scan_Scan",
         "parameters": [
           {
+            "type": "string",
             "name": "folderName",
             "in": "query",
-            "schema": {
-              "type": "string"
-            }
+            "x-nullable": true
           },
           {
+            "type": "string",
             "name": "fileName",
             "in": "query",
-            "schema": {
-              "type": "string"
-            }
+            "x-nullable": true
           },
           {
+            "type": "string",
             "name": "scanQuality",
             "in": "query",
-            "schema": {
-              "$ref": "#/components/schemas/ScanQuality"
-            }
+            "x-schema": {
+              "$ref": "#/definitions/ScanQuality"
+            },
+            "x-nullable": false,
+            "enum": [
+              "Fast",
+              "Normal",
+              "Good",
+              "Best"
+            ]
           }
         ],
         "responses": {
           "200": {
-            "description": "Success",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "type": "string"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "type": "string"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "type": "string"
-                }
-              }
+            "x-nullable": false,
+            "description": "",
+            "schema": {
+              "type": "string"
+            }
+          },
+          "400": {
+            "x-nullable": false,
+            "description": "",
+            "schema": {
+              "type": "string"
             }
           }
         }
       }
     }
   },
-  "components": {
-    "schemas": {
-      "ScanQuality": {
-        "enum": [
-          "Fast",
-          "Normal",
-          "Good",
-          "Best"
-        ],
-        "type": "string"
-      }
+  "definitions": {
+    "ScanQuality": {
+      "type": "string",
+      "description": "",
+      "x-enumNames": [
+        "Fast",
+        "Normal",
+        "Good",
+        "Best"
+      ],
+      "enum": [
+        "Fast",
+        "Normal",
+        "Good",
+        "Best"
+      ]
     }
   }
 }
